; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/core/extr_sysfs.c_sm_sl_show.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/core/extr_sysfs.c_sm_sl_show.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ib_port = type { i32, i32 }
%struct.port_attribute = type { i32 }
%struct.ib_port_attr = type { i32 }

@.str = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.ib_port*, %struct.port_attribute*, i8*)* @sm_sl_show to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @sm_sl_show(%struct.ib_port* %0, %struct.port_attribute* %1, i8* %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca %struct.ib_port*, align 8
  %6 = alloca %struct.port_attribute*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca %struct.ib_port_attr, align 4
  %9 = alloca i64, align 8
  store %struct.ib_port* %0, %struct.ib_port** %5, align 8
  store %struct.port_attribute* %1, %struct.port_attribute** %6, align 8
  store i8* %2, i8** %7, align 8
  %10 = load %struct.ib_port*, %struct.ib_port** %5, align 8
  %11 = getelementptr inbounds %struct.ib_port, %struct.ib_port* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.ib_port*, %struct.ib_port** %5, align 8
  %14 = getelementptr inbounds %struct.ib_port, %struct.ib_port* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i64 @ib_query_port(i32 %12, i32 %15, %struct.ib_port_attr* %8)
  store i64 %16, i64* %9, align 8
  %17 = load i64, i64* %9, align 8
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %21

19:                                               ; preds = %3
  %20 = load i64, i64* %9, align 8
  store i64 %20, i64* %4, align 8
  br label %26

21:                                               ; preds = %3
  %22 = load i8*, i8** %7, align 8
  %23 = getelementptr inbounds %struct.ib_port_attr, %struct.ib_port_attr* %8, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = call i64 @sprintf(i8* %22, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i32 %24)
  store i64 %25, i64* %4, align 8
  br label %26

26:                                               ; preds = %21, %19
  %27 = load i64, i64* %4, align 8
  ret i64 %27
}

declare dso_local i64 @ib_query_port(i32, i32, %struct.ib_port_attr*) #1

declare dso_local i64 @sprintf(i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
